--- a/front-end/src/app/painel/painel.component.html
+++ b/front-end/src/app/painel/painel.component.html
@@ -1,3 +1,23 @@
-<p>
-  painel works!
-</p>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+
+      <div class="col-sm-12">
+        <input type="text" class="form-control" id="txtCalc" placeholder="0">
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-sm-9">
+        <app-numbers></app-numbers>
+      </div>
+
+      <div class="col-sm-3">
+          <app-sinais></app-sinais>
+      </div>
+
+    </div>
+
+  </div>
+</div>
