--- a/front-end/src/app/numbers/numbers.component.html
+++ b/front-end/src/app/numbers/numbers.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">7</button>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">8</button>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">9</button>
         </div>
@@ -17,17 +17,17 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">4</button>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">5</button>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">6</button>
         </div>
@@ -35,17 +35,17 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">1</button>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">2</button>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm-4">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">3</button>
         </div>
@@ -53,7 +53,7 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">0</button>
         </div>
