--- a/front-end/src/app/sinais/sinais.component.html
+++ b/front-end/src/app/sinais/sinais.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">+</button>
         </div>
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">-</button>
         </div>
@@ -15,7 +15,7 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">*</button>
         </div>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">/</button>
         </div>
@@ -31,7 +31,7 @@
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12">
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-dark">=</button>
         </div>
